# pizh2312_petrischev

labwork1/: example.txt  example1.txt  main.cpp
labwork2/lib/: number.cpp  number.h
labwork3/: CMakeLists.txt
labwork3/input/: input.tsv
labwork3/lib/: args_parser.h  bmp_writer.h  sandpile.h
labwork3/src/: CMakeLists.txt  args_parser.cpp  bmp_writer.cpp  main.cpp  sandpile.cpp
labwork5/lib/: ArgParser.cpp  ArgParser.h
labwork6/lib/: parser.cpp  parser.h
labwork7/: CMakeLists.txt
labwork7/lib/: CMakeLists.txt  ID3Parser.cpp  ID3Parser.h
labwork7/tests/: CMakeLists.txt  ID3ParserTests.cpp
labwork8/lib/: bst.h
labwork8/tests/: test_bst.cpp
labwork9/: CMakeLists.txt
labwork9/lib/: CMakeLists.txt  range_adapters.h
labwork9/tests/: CMakeLists.txt  test_adapters.cpp
python/week1/: lesson3.py  lesson8.py
python/week1/lesson9/: modules.py  room.py
python/week2/: snow.py
python/week3/: readme.md  roman.py
python/week4/deposit/: main.py
python/week4/money/: money.json
python/week5/MoneyCollection/: MoneyCollection.py
the_snake/: README.md  the_snake.py
week1/: lesson2.py  lesson6.py
week1/lesson11/: pupil.py
week1/lesson2/: readme.md
week1/lesson4/: heroes.py
week1/lesson5/: polymorph.py
week1/lesson7/: compose.py
week2/: readme.md  snow.py
week3/: pizzeria.py
week4/: readme.md
week4/deposit/: deposit.py
week4/money/: main.py  money.py
week5/: readme.md
week5/Hierarchy/: main.py  player.py
week5/MoneyCollection/: MoneyCollection.json  main.py  money.py
